<resources>
    <string name="app_name">Bookz</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="book_title">Book</string>
    <string name="add_book">Add a Book</string>
    <string name="content_book_name">type  book name here</string>
    <string name="book_name_hint">book name here... </string>
    <string name="input_prefill"> </string>
    <string name="add_author">Add an Author</string>
    <string name="content_author_name">type author name here</string>
    <string name="author_name_hint">author name here...</string>
    <string name="title_activity_book_detail">BookDetailActivity</string>
    <string name="book_open">open on goodreads</string>
    <string name="no_books">No Books added yet</string>
    <string name="title_activity_author">AuthorActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="error">error</string>
    <string name="error_retrieving_data">error in retrieving data</string>
    <string name="author_id">authorId</string>
    <string name="book_name">bookName</string>
    <string name="user_node">Users</string>
    <string name="book_node">books</string>
    <string name="book_added">book added to your favourite Successfully</string>
    <string name="book_not_added">Sorry, an error occurred , please try again</string>
    <string name="models">models</string>
    <string name="bundle">bundle</string>
    <string name="wait_message">please wait ...</string>
    <string name="loading">loading</string>
    <string name="error_try_again">an error occured, please try again</string>
    <string name="write_pass_email">please make sure to fill email and password field</string>
    <string name="log_in">account created successfully , now log in please</string>
    <string name="book_image">book_image</string>
    <string name="book_title_view">book_title</string>
    <string name="author_name">author_name</string>
    <string name="book_date">book_date</string>
    <string name="publicsher">publisher</string>
    <string name="publishyear">publisher_year</string>
    <string name="book_descrption">book_description</string>
    <string name="open_ingoodreads">open_in_goodreads</string>
    <string name="fav_book">favourite_book</string>
    <string name="email">email</string>
    <string name="passwrod">password</string>
    <string name="login">Log in</string>
    <string name="signup">Sign Up</string>
    <string name="first_name">first name ..</string>
    <string name="second_name">second name ..</string>
</resources>
