<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_login">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:hint="@string/email"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:id="@+id/mailfield"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:hint="@string/passwrod"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:id="@+id/passwordfield"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/black"
        android:id="@+id/signinbtn"
        />

    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:gravity="bottom">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/black"
            android:id="@+id/signup"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_gravity="start|end"/>
    </RelativeLayout>


</LinearLayout>