<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/book_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:contentDescription="@string/app_name"
                tools:src="@mipmap/ic_launcher"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:title="@string/book_title"
                android:titleTextColor="@android:color/white"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/direction_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/outer_space"
                card_view:cardElevation="@dimen/inner_small"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/book_image"
                                android:layout_width="@dimen/post_width"
                                android:layout_height="@dimen/poster_height"
                                android:layout_marginLeft="@dimen/outer_space"
                                android:layout_marginRight="@dimen/outer_space"
                                android:contentDescription="@string/book_image"
                                android:layout_marginTop="@dimen/outer_space" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/outer_space"
                            android:layout_marginLeft="@dimen/outer_space"
                            android:layout_marginRight="@dimen/outer_space"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/book_author"
                                android:contentDescription="@string/author_name"
                                android:textAppearance="?android:textAppearanceLarge"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/book_date"
                                android:contentDescription="@string/book_date"
                                android:textAppearance="?android:textAppearanceLarge"
                                />
                            <TextView
                                android:id="@+id/book_vote_average"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/inner_space"
                                android:contentDescription="@string/publicsher"
                                />
                            <TextView
                                android:id="@+id/book_publisher"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/inner_space"
                                android:contentDescription="@string/publishyear"
                                />


                        </LinearLayout>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/book_title"
                        android:textSize="22dp"
                        android:textStyle="bold|italic"
                        android:textColor="#000000"
                        android:layout_margin="@dimen/outer_space" />

                    <TextView
                        android:id="@+id/book_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/book_descrption"
                        android:layout_margin="@dimen/outer_space"
                        android:textSize="@dimen/md_content_textsize" />


                    <Button
                        android:id="@+id/btnLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/book_open"
                        android:tag="@string/book_open"
                        android:background="@android:color/holo_blue_light"
                        android:textColor="@android:color/white"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:contentDescription="@string/open_ingoodreads"
                        android:layout_marginBottom="@dimen/inner_space"
                        android:layout_marginRight="@dimen/outer_space"
                        android:layout_marginLeft="@dimen/outer_space"
                        />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favorite_fab"
        style="@style/FavoriteButton"
        android:layout_margin="@dimen/outer_space"
        android:clickable="true"
        android:background="@android:color/white"
        app:pressedTranslationZ="12dp"
        android:contentDescription="@string/fav_book"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"/>
</android.support.design.widget.CoordinatorLayout>